# ObsidianTagging

./: .gitignore  README.md  plan.md  tags.json
.claude/commands/: tag.md
00-Inbox/: test-atomic-notes.md  test-note-taking-systems.md  test-rust-programming.md  test-zettelkasten.md
tools/tagger/: Cargo.toml
tools/tagger/src/: embed.rs  extract.rs  index.rs  main.rs
