[package]
name = "tagger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tagger"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", features = ["tokio"] }
candle-core = { version = "0.10" }
candle-nn = { version = "0.10" }
candle-transformers = { version = "0.10" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
